--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="python.js"></script>
 <script type="text/javascript" src="protobuf.js"></script>
 <script type="text/javascript" src="flatbuffers.js"></script>
+<script type="text/javascript" src="flexbuffers.js"></script>
 <script type="text/javascript" src="zip.js"></script>
 <script type="text/javascript" src="gzip.js"></script>
 <script type="text/javascript" src="tar.js"></script>
