--- a/source/index.html
+++ b/source/index.html
@@ -75,8 +75,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .about .logo-github { top: 130px; width: 24px; height: 24px; }
 .about .open-file-button { display: none; }
 .about .github-button { display: none; }
-.about .consent-message { display: none; }
-.about .consent-accept-button { display: none; }
+.about .message { display: none; }
+.about .message-button { display: none; }
 .about .graph { display: flex; opacity: 1; }
 .about .toolbar { display: block; opacity: 1; }
 .about .transparent { display: block; opacity: 0.5; }
@@ -97,8 +97,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome button:focus { outline: 0; }
 .welcome .open-file-button { top: 170px; left: -150px; width: 125px; opacity: 1; }
 .welcome .github-button { top: 170px; left: 150px; width: 125px; opacity: 1; }
-.welcome .consent-accept-button { top: 220px; left: 0px; width: 125px; display: none; opacity: 0; }
-.welcome .consent-message { top: 120px; left: 0px; font-size: 13px; text-align: center; line-height: 20px; color: #444444; display: none; opacity: 0; }
+.welcome .message-button { top: 220px; left: 0px; width: 125px; display: none; opacity: 0; }
+.welcome .message { top: 120px; left: 0px; font-size: 13px; text-align: center; line-height: 20px; color: #444444; display: none; opacity: 0; }
 .welcome .graph { display: none; opacity: 0; }
 .welcome.spinner .logo-spinner { display: block; -webkit-animation: orbit 0.5s infinite linear; animation: orbit 0.5s infinite linear; cursor: wait; }
 @-webkit-keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
@@ -107,11 +107,11 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome.spinner .logo-name { display: none; }
 .welcome.spinner .open-file-button { opacity: 0; display: none; }
 .welcome.spinner .github-button { opacity: 0; display: none; }
-.welcome.consent .logo-name { display: none; }
-.welcome.consent .open-file-button { opacity: 0; display: none; }
-.welcome.consent .github-button { opacity: 0; display: none; }
-.welcome.consent .consent-accept-button { opacity: 1; display: block; }
-.welcome.consent .consent-message { opacity: 1; display: block; }
+.welcome.message .logo-name { display: none; }
+.welcome.message .open-file-button { opacity: 0; display: none; }
+.welcome.message .github-button { opacity: 0; display: none; }
+.welcome.message .message-button { opacity: 1; display: block; }
+.welcome.message .message { opacity: 1; display: block; }
 .welcome.spinner .graph { display: flex; opacity: 0; }
 .welcome .toolbar { display: none; }
 .default { background-color: #ffffff; }
@@ -138,7 +138,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo-spinner-stroke { stroke: #ffffff; }
 .welcome .logo button { color: #888888; background-color: #1e1e1e; border-color: #888888; }
 .welcome .logo button:hover { color: #1e1e1e; background-color: #888888; }
-.welcome .consent-message { color: #888888; display: none; opacity: 0; }
+.welcome .message { color: #888888; display: none; opacity: 0; }
 .icon .border { stroke: #1d1d1d; }
 .icon .stroke { stroke: #aaaaaa; }
 .icon:hover .stroke { stroke: #dfdfdf; }
@@ -159,8 +159,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo-spinner { left: 0; top: 0; width: 128px; height: 128px; }
 .welcome .logo .open-file-button { top: 180px; left: 0; }
 .welcome .logo .github-button { top: 270px; left: 0; }
-.welcome .logo .consent-message { top: 140px; }
-.welcome .logo .consent-accept-button { top: 310px; }
+.welcome .logo .message { top: 140px; }
+.welcome .logo .message-button { top: 310px; }
 .about .logo { border-radius: 0; border-left: 0px; border-right: 0px; width: 100%; padding-left: 0; padding-right: 0; }
 .about.desktop .logo { width: 320px; padding: 40px; }
 }
@@ -361,8 +361,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
                 C438.536,184.851,428.728,148.168,409.132,114.573z"/>
         </svg>
     </a>
-    <span class="center consent-message">This app uses cookies to report errors and anonymous usage information.</span>
-    <button id="consent-accept-button" class="center consent-accept-button">Accept</button>
+    <span id="message" class="center message"></span>
+    <button id="message-button" class="center message-button">Accept</button>
     <button id="open-file-button" class="center open-file-button">Open Model&hellip;</button>
     <button id="github-button" class="center github-button">Download</button>
     <input type="file" id="open-file-dialog" class="open-file-dialog" multiple="false" accept=".onnx, .ort, .pb, .meta, .tflite, .lite, .tfl, .keras, .h5, .hd5, .hdf5, .json, .model, .mar, .params, .param, .armnn, .mnn, .ncnn, .tnnproto, .tmfile, .ms, .om, .nn, .uff, .rknn, .xmodel, .kmodel, .paddle, .pdmodel, .pdiparams, .pdparams, .pdopt, .nb, .dnn, .cmf, .mlmodel, .mlpackage, .caffemodel, .pbtxt, .prototxt, .pkl, .pt, .pth, .ptl, .t7, .joblib, .cfg, .xml, .zip, .tar">
