--- a/source/electron.html
+++ b/source/electron.html
@@ -49,6 +49,8 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .github-button { top: 170px; left: 150px; width: 125px; opacity: 1; }
 .welcome .message-button { top: 220px; left: 0px; width: 125px; display: none; opacity: 0; }
 .welcome .message { top: 120px; left: 0px; font-size: 13px; text-align: center; line-height: 20px; color: #444444; display: none; opacity: 0; }
+.welcome .progress { top: 120px; height: 2px; width: 100%; }
+.welcome .progress-bar { height: 100%; width: 0%; background-color: #444444; }
 .welcome .graph { display: none; opacity: 0; }
 .welcome.spinner .logo-spinner { display: block; -webkit-animation: orbit 0.5s infinite linear; animation: orbit 0.5s infinite linear; cursor: wait; }
 @-webkit-keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
@@ -81,6 +83,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo button { color: #888888; background-color: #1e1e1e; border-color: #888888; }
 .welcome .logo button:hover { color: #1e1e1e; background-color: #888888; }
 .welcome .message { color: #888888; display: none; opacity: 0; }
+.welcome .progress-bar { background-color: #888888; }
 .icon .border { stroke: #1d1d1d; }
 .icon .stroke { stroke: #aaaaaa; }
 .icon:hover .stroke { stroke: #dfdfdf; }
@@ -305,6 +308,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
     <button id="message-button" class="center message-button"></button>
     <button id="open-file-button" class="center open-file-button" tabindex="0">Open Model&hellip;</button>
     <button id="github-button" class="center github-button">GitHub</button>
+    <div class="center progress">
+        <div id="progress-bar" class="progress-bar"></div>
+    </div>
     <input type="file" id="open-file-dialog" class="open-file-dialog" multiple="false" accept="">
     <!-- Preload fonts to workaround Chrome SVG layout issue -->
     <div style="font-weight: normal; color: rgba(0, 0, 0, 0.01); user-select: none;">.</div>
