--- a/source/electron.html
+++ b/source/electron.html
@@ -49,7 +49,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .github-button { top: 170px; left: 150px; width: 125px; opacity: 1; }
 .welcome .message-button { top: 220px; left: 0px; width: 125px; display: none; opacity: 0; }
 .welcome .message { top: 120px; left: 0px; font-size: 13px; text-align: center; line-height: 20px; color: #444444; display: none; opacity: 0; }
-.welcome .progress { top: 120px; height: 2px; width: 100%; }
+.welcome .progress { top: 120px; height: 2px; width: 400px; }
 .welcome .progress-bar { height: 100%; width: 0%; background-color: #444444; }
 .welcome .graph { display: none; opacity: 0; }
 .welcome.spinner .logo-spinner { display: block; -webkit-animation: orbit 0.5s infinite linear; animation: orbit 0.5s infinite linear; cursor: wait; }
@@ -106,6 +106,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo .github-button { top: 270px; left: 0; }
 .welcome .logo .message { top: 140px; }
 .welcome .logo .message-button { top: 310px; }
+.welcome .progress { top: 160px; height: 2px; width: 100px; }
 .about .logo { border-radius: 0; border-left: 0px; border-right: 0px; width: 100%; padding-left: 0; padding-right: 0; }
 .about.desktop .logo { width: 320px; padding: 40px; }
 }
