Update index.html (#977)

--- a/source/index.html
+++ b/source/index.html
@@ -95,9 +95,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome button { font-size: 12px; font-weight: bold; line-height: 1.25; text-align: center; vertical-align: middle; min-width: 60px; height: 32px; border-radius: 16px; transition: 0.1s; user-select: none; -webkit-user-select: none; -moz-user-select: none; color: #444444; background-color: #ececec; border: 1px solid #444444; }
 .welcome button:hover { color: #ececec; background-color: #444444; cursor: pointer; transition: 0.2s; }
 .welcome button:focus { outline: 0; }
-.welcome .open-file-button { top: 170px; left: -150px; width: 125px; opacity: 1; }
-.welcome .github-button { top: 170px; left: 150px; width: 125px; opacity: 1; }
-.welcome .message-button { top: 220px; left: 0px; width: 125px; display: none; opacity: 0; }
+.welcome .open-file-button { top: 133px; left: -150px; width: 125px; opacity: 1; margin: 0 auto 0 auto; }
+.welcome .github-button { width: 125px; top: 133px; left: 150px; opacity: 1; margin: 0 auto 0 auto; }
+.welcome .message-button { top: 160px; left: 0px; width: 125px; display: none; opacity: 0; margin: 0 auto 0 auto; }
 .welcome .message { top: 120px; left: 0px; font-size: 13px; text-align: center; line-height: 20px; color: #444444; display: none; opacity: 0; }
 .welcome .progress { top: 120px; height: 2px; width: 400px; }
 .welcome .progress-bar { height: 100%; width: 0%; background-color: #444444; }
@@ -160,10 +160,10 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo-name { opacity: 0; }
 .welcome .logo-icon { left: 0; top: 0; width: 128px; height: 128px; }
 .welcome .logo-spinner { left: 0; top: 0; width: 128px; height: 128px; }
-.welcome .logo .open-file-button { top: 180px; left: 0; }
-.welcome .logo .github-button { top: 270px; left: 0; }
+.welcome .logo .open-file-button { top: 150px; left: 0; }
+.welcome .logo .github-button { top: 200px; left: 0; }
+.welcome .logo .message-button { top: 200px; }
 .welcome .logo .message { top: 140px; }
-.welcome .logo .message-button { top: 310px; }
 .welcome .progress { top: 160px; height: 2px; width: 100px; }
 .about .logo { border-radius: 0; border-left: 0px; border-right: 0px; width: 100%; padding-left: 0; padding-right: 0; }
 .about.desktop .logo { width: 320px; padding: 40px; }
