Update index.html (#958) (#979)

--- a/source/index.html
+++ b/source/index.html
@@ -78,6 +78,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .about .message { display: none; }
 .about .message-button { display: none; }
 .about .graph { display: flex; opacity: 1; }
+.about .progress { display: none; }
 .about .toolbar { display: block; opacity: 1; }
 .about .transparent { display: block; opacity: 0.5; }
 .welcome { background-color: #ececec; color: #242424; }
