--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 <meta name="version" content="0.0.0">
 <meta name="date" content="">
 <title>Netron</title>
-<link rel="stylesheet" type="text/css" href="view-grapher.css">
+<link rel="stylesheet" type="text/css" href="grapher.css">
 <link rel="stylesheet" type="text/css" href="view-sidebar.css">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="icon" type="image/png" href="icon.png">
@@ -26,7 +26,7 @@
 <script type="text/javascript" src="zip.js"></script>
 <script type="text/javascript" src="gzip.js"></script>
 <script type="text/javascript" src="tar.js"></script>
-<script type="text/javascript" src="view-grapher.js"></script>
+<script type="text/javascript" src="grapher.js"></script>
 <script type="text/javascript" src="view-sidebar.js"></script>
 <script type="text/javascript" src="view.js"></script>
 <script type="text/javascript" src="index.js"></script>
