--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 <meta name="date" content="">
 <title>Netron</title>
 <link rel="stylesheet" type="text/css" href="grapher.css">
-<link rel="stylesheet" type="text/css" href="view-sidebar.css">
+<link rel="stylesheet" type="text/css" href="dialog.css">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="icon" type="image/png" href="icon.png">
 <link rel="apple-touch-icon" type="image/png" href="icon.png">
@@ -27,7 +27,7 @@
 <script type="text/javascript" src="gzip.js"></script>
 <script type="text/javascript" src="tar.js"></script>
 <script type="text/javascript" src="grapher.js"></script>
-<script type="text/javascript" src="view-sidebar.js"></script>
+<script type="text/javascript" src="dialog.js"></script>
 <script type="text/javascript" src="view.js"></script>
 <script type="text/javascript" src="index.js"></script>
 <style>
