--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
 <link rel="fluid-icon" type="image/png" href="icon.png">
 <script type="text/javascript" src="index.js"></script>
 <style>
-html { touch-action: none; overflow: hidden; width: 100%; height: 100%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; text-rendering: optimizeLegibility; -webkit-text-rendering: optimizeLegibility; -moz-text-rendering: optimizeLegibility; -ms-text-rendering: optimizeLegibility; -o-text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; -o-font-smoothing: antialiased; }
+html { touch-action: none; overflow: hidden; width: 100%; height: 100%; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; text-rendering: optimizeLegibility; -webkit-text-rendering: optimizeLegibility; -moz-text-rendering: optimizeLegibility; -ms-text-rendering: optimizeLegibility; -o-text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; -o-font-smoothing: antialiased; -webkit-app-region: drag; }
 body { touch-action: none; overflow: hidden; width: 100%; height: 100%; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "PingFang SC"; font-size: 12px; text-rendering: geometricPrecision; }
 button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "PingFang SC"; }
 .center { position: absolute; margin: auto; top: 0; right: 0; bottom: 0; left: 0; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
@@ -32,9 +32,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .toolbar-back-button:hover { background: #000000; border-color: #000000; }
 .toolbar-name-button { float: left; background: rgba(255, 255, 255, 0.95); border-top-right-radius: 6px; border-bottom-right-radius: 6px; border: 1px solid #777; color: #777; border-left: 1px; border-left-color: #ffffff; margin: 2px 0 2px 0; padding: 0 12px 0 6px; cursor: pointer; width: auto; height: 20px; font-size: 11px; line-height: 0; transition: 0.1s; }
 .toolbar-name-button:hover { color: #000000; }
-.icon .border { stroke: #fff; }
-.icon .stroke { stroke: #808080; }
-.icon:hover .stroke { stroke: #000000; }
+.toolbar-icon .border { stroke: #fff; }
+.toolbar-icon .stroke { stroke: #808080; }
+.toolbar-icon:hover .stroke { stroke: #000000; }
 .dropdown { display: none; position: absolute; min-width: 225px; z-index: 1; border-radius: 4px; background-color: #f6f6f6; border: 1px solid rgba(0,0,0,.15); padding-top: 2px; padding-bottom: 2px; margin-left: 2px; overflow: hidden; }
 .dropdown button { display: block; border: none; border-radius: 0; background-color: transparent; color: black; width: 100%; text-align: left; padding: 4px 12px 5px 12px; white-space: no-wrap; font-size: 12px; }
 .dropdown button:hover { color: #ffffff; background-color: #2e6bd2; }
@@ -89,6 +89,11 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .progress-bar { height: 100%; width: 0%; background-color: #444444; }
 .welcome .graph { display: none; opacity: 0; }
 .welcome.spinner .logo-spinner { display: block; -webkit-animation: orbit 0.5s infinite linear; animation: orbit 0.5s infinite linear; cursor: wait; }
+.titlebar { display: none; height: 32px; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 2; -webkit-app-region: drag; }
+.titlebar-content { display: block; color: #aaaaaa; padding: 0 142px; height: 100%; text-align: center; font-size: 14px; line-height: 32px; transition: all .25s ease-in-out; user-select: none; }
+.titlebar-content-text { display: block; direction: rtl; overflow: hidden; text-overflow: clip; white-space: nowrap; }
+.titlebar-content .active { color: #464646; transition: all .25s ease-in-out; }
+.titlebar-icon { width: 1em; height: 1em; vertical-align: -0.15em; fill: currentColor; overflow: hidden; }
 @-webkit-keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 @keyframes orbit { 0% { -webkit-transform: rotate(0deg); transform: rotate(0deg); }  100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 .welcome.spinner .logo-spinner-stroke { stroke: #ececec; }
@@ -128,9 +133,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome .logo button:hover { color: #1e1e1e; background-color: #888888; }
 .welcome .message { color: #888888; display: none; opacity: 0; }
 .welcome .progress-bar { background-color: #888888; }
-.icon .border { stroke: #1d1d1d; }
-.icon .stroke { stroke: #aaaaaa; }
-.icon:hover .stroke { stroke: #dfdfdf; }
+.toolbar-icon .border { stroke: #1d1d1d; }
+.toolbar-icon .stroke { stroke: #aaaaaa; }
+.toolbar-icon:hover .stroke { stroke: #dfdfdf; }
 .dropdown { background-color: #373737; border-color: #000000; }
 .dropdown button { color: #ffffff; }
 .dropdown button:hover { color: #ffffff; background-color: #1d59d1; }
@@ -139,6 +144,9 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .toolbar-back-button:hover { background: #dfdfdf; border-color: #dfdfdf; }
 .toolbar-name-button { background: #404040; border-color: #aaaaaa; color: #cccccc; }
 .toolbar-name-button:hover { color: #dfdfdf; }
+.titlebar-content { color: #949494; }
+.active .titlebar-content { color: #c4c4c4; }
+.titlebar-control { /* background-color: #000000; */ height: 100%; position: absolute; top: 0; right: 0; width: 138px; display: flex; align-items: center; flex-direction: row-reverse; }
 }
 @media all and (max-width: 640px) {
 .welcome .logo { width: 240px; }
@@ -168,7 +176,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 <div id="sidebar" class="sidebar"></div>
 <div id="toolbar" class="toolbar">
     <button id="menu-button" class="toolbar-button" title="Menu">
-        <svg class="icon" viewbox="0 0 100 100">
+        <svg class="toolbar-icon" viewbox="0 0 100 100">
             <rect class="border" x="12" y="12" width="76" height="76" rx="16" ry="16" stroke-width="8"></rect>
             <line class="border" x1="30" y1="37" x2="70" y2="37" stroke-width="8" stroke-linecap="round" stroke="#fff"></line>
             <line class="border" x1="30" y1="50" x2="70" y2="50" stroke-width="8" stroke-linecap="round" stroke="#fff"></line>
@@ -180,7 +188,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
         </svg>
     </button>
     <button id="zoom-in-button" class="toolbar-button" title="Zoom In">
-        <svg class="icon" viewbox="0 0 100 100">
+        <svg class="toolbar-icon" viewbox="0 0 100 100">
             <circle class="border" cx="50" cy="50" r="35" stroke-width="8" stroke="#fff"></circle>
             <line class="border" x1="50" y1="38" x2="50" y2="62" stroke-width="8" stroke-linecap="round" stroke="#fff"></line>
             <line class="border" x1="38" y1="50" x2="62" y2="50" stroke-width="8" stroke-linecap="round" stroke="#fff"></line>
@@ -192,7 +200,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
         </svg>
     </button>
     <button id="zoom-out-button" class="toolbar-button" title="Zoom Out">
-        <svg class="icon" viewbox="0 0 100 100">
+        <svg class="toolbar-icon" viewbox="0 0 100 100">
             <circle class="border" cx="50" cy="50" r="35" stroke-width="8" stroke="#fff"></circle>
             <line class="border" x1="38" y1="50" x2="62" y2="50" stroke-width="8" stroke-linecap="round" stroke="#fff"></line>
             <line class="border" x1="78" y1="78" x2="82" y2="82" stroke-width="12" stroke-linecap="square" stroke="#fff"></line>
@@ -363,6 +371,17 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
     <div style="font-weight: normal; color: rgba(0, 0, 0, 0.01); user-select: none;">.</div>
     <div style="font-weight: bold; color: rgba(0, 0, 0, 0.01); user-select: none;">.</div>
     <div style="font-weight: bold; color: rgba(0, 0, 0, 0.01); user-select: none;">.</div>
+</div>
+<div id="titlebar" class="titlebar">
+    <svg style="position: absolute; width: 0px; height: 0px; overflow: hidden;" aria-hidden="true">
+        <symbol id="icon-arrow-right" viewBox="0 0 1024 1024">
+            <path d="M698.75712 565.02272l-191.488 225.4848a81.73568 81.73568 0 0 1-62.48448 28.89728 81.89952 81.89952 0 0 1-62.40256-134.94272l146.432-172.4416-146.432-172.4416a81.92 81.92 0 0 1 124.88704-106.06592l191.488 225.4848a81.87904 81.87904 0 0 1 0 106.02496z"></path>
+        </symbol>
+    </svg>
+    <div id="titlebar-content" class="titlebar-content">
+        <span id="titlebar-content-text" class="titlebar-content-text"></span>
+    </div>
+    <div id="titlebar-control" class="titlebar-control"></div>
 </div>
 </body>
 </html>
