--- a/source/index.html
+++ b/source/index.html
@@ -378,7 +378,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
         </svg>
     </a>
     <span id="message" class="center message"></span>
-    <button id="message-button" class="center message-button">Accept</button>
+    <button id="message-button" class="center logo-button message-button">Accept</button>
     <button id="open-file-button" class="center logo-button open-file-button" tabindex="0">Open Model&hellip;</button>
     <button id="github-button" class="center logo-button github-button">GitHub</button>
     <div class="center progress">
